// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtlassianColor hsl 1`] = `
<DocumentFragment>
  <div
    class="css-vpkdz5-AtlassianColor"
  >
    <div
      class="css-6bf4yd-CopyContainer"
      style="display: inline-block;"
    >
      <div
        class="css-218x1i-AtlassianColor"
      >
        <div
          class="css-sapaxh-AtlassianColor"
        >
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-uymk26-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              PASS
            </span>
          </div>
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-18g2qr-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              PASS
            </span>
          </div>
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-w94hel-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              PASS
            </span>
          </div>
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-rmxtjy-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              FAIL
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-pc76l-AtlassianColor"
    >
      <div
        class="css-kdybcm-AtlassianColor"
      >
        <div>
          NAME
        </div>
        <div
          class="css-1rnzr54-AtlassianColor"
        >
          accent
        </div>
      </div>
      <div
        class="css-1296n4u-AtlassianColor"
      >
        <div
          class="css-kdybcm-AtlassianColor"
        >
          <div>
            HEX
          </div>
          <div>
            #8C7873
          </div>
        </div>
        <div
          class="css-kdybcm-AtlassianColor"
        >
          <div>
            RGB
          </div>
          <div>
            140, 120, 115
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AtlassianColor hsla 1`] = `
<DocumentFragment>
  <div
    class="css-vpkdz5-AtlassianColor"
  >
    <div
      class="css-6bf4yd-CopyContainer"
      style="display: inline-block;"
    >
      <div
        class="css-ysbnop-AtlassianColor"
      >
        <div
          class="css-sapaxh-AtlassianColor"
        >
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-uymk26-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              PASS
            </span>
          </div>
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-18g2qr-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              PASS
            </span>
          </div>
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-w94hel-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              PASS
            </span>
          </div>
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-rmxtjy-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              FAIL
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-pc76l-AtlassianColor"
    >
      <div
        class="css-kdybcm-AtlassianColor"
      >
        <div>
          NAME
        </div>
        <div
          class="css-1rnzr54-AtlassianColor"
        >
          accent
        </div>
      </div>
      <div
        class="css-1296n4u-AtlassianColor"
      >
        <div
          class="css-kdybcm-AtlassianColor"
        >
          <div>
            HEX
          </div>
          <div>
            #8C7873
          </div>
        </div>
        <div
          class="css-kdybcm-AtlassianColor"
        >
          <div>
            RGB
          </div>
          <div>
            140, 120, 115
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AtlassianColor name 1`] = `
<DocumentFragment>
  <div
    class="css-vpkdz5-AtlassianColor"
  >
    <div
      class="css-6bf4yd-CopyContainer"
      style="display: inline-block;"
    >
      <div
        class="css-710neg-AtlassianColor"
      >
        <div
          class="css-sapaxh-AtlassianColor"
        >
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-uymk26-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              PASS
            </span>
          </div>
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-18g2qr-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              PASS
            </span>
          </div>
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-w94hel-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              PASS
            </span>
          </div>
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-rmxtjy-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              FAIL
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-pc76l-AtlassianColor"
    >
      <div
        class="css-kdybcm-AtlassianColor"
      >
        <div>
          NAME
        </div>
        <div
          class="css-1rnzr54-AtlassianColor"
        >
          brand - Critical
        </div>
      </div>
      <div
        class="css-1296n4u-AtlassianColor"
      >
        <div
          class="css-kdybcm-AtlassianColor"
        >
          <div>
            HEX
          </div>
          <div>
            #F94D32
          </div>
        </div>
        <div
          class="css-kdybcm-AtlassianColor"
        >
          <div>
            RGB
          </div>
          <div>
            249, 77, 50
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AtlassianColor overview 1`] = `
<DocumentFragment>
  <div
    class="css-vpkdz5-AtlassianColor"
  >
    <div
      class="css-6bf4yd-CopyContainer"
      style="display: inline-block;"
    >
      <div
        class="css-1z03bfs-AtlassianColor"
      >
        <div
          class="css-sapaxh-AtlassianColor"
        >
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-uymk26-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              PASS
            </span>
          </div>
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-18g2qr-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              PASS
            </span>
          </div>
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-w94hel-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              PASS
            </span>
          </div>
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-rmxtjy-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              PASS
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-pc76l-AtlassianColor"
    >
      <div
        class="css-kdybcm-AtlassianColor"
      >
        <div>
          NAME
        </div>
        <div
          class="css-1rnzr54-AtlassianColor"
        >
          Blue400
        </div>
      </div>
      <div
        class="css-1296n4u-AtlassianColor"
      >
        <div
          class="css-kdybcm-AtlassianColor"
        >
          <div>
            HEX
          </div>
          <div>
            #2270EE
          </div>
        </div>
        <div
          class="css-kdybcm-AtlassianColor"
        >
          <div>
            RGB
          </div>
          <div>
            34, 112, 238
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AtlassianColor palette 1`] = `
<DocumentFragment>
  <div
    class="css-1mhhg7b"
  >
    <div
      class="css-vpkdz5-AtlassianColor"
    >
      <div
        class="css-6bf4yd-CopyContainer"
        style="display: inline-block;"
      >
        <div
          class="css-1uckatl-AtlassianColor"
        >
          <div
            class="css-sapaxh-AtlassianColor"
          >
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-uymk26-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                PASS
              </span>
            </div>
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-18g2qr-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                PASS
              </span>
            </div>
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-w94hel-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                PASS
              </span>
            </div>
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-rmxtjy-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                FAIL
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-pc76l-AtlassianColor"
      >
        <div
          class="css-kdybcm-AtlassianColor"
        >
          <div>
            NAME
          </div>
          <div
            class="css-1rnzr54-AtlassianColor"
          >
            R300 - Poppy surprise
          </div>
        </div>
        <div
          class="css-1296n4u-AtlassianColor"
        >
          <div
            class="css-kdybcm-AtlassianColor"
          >
            <div>
              HEX
            </div>
            <div>
              #FF5630
            </div>
          </div>
          <div
            class="css-kdybcm-AtlassianColor"
          >
            <div>
              RGB
            </div>
            <div>
              255, 86, 48
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-vpkdz5-AtlassianColor"
    >
      <div
        class="css-6bf4yd-CopyContainer"
        style="display: inline-block;"
      >
        <div
          class="css-qk15tg-AtlassianColor"
        >
          <div
            class="css-sapaxh-AtlassianColor"
          >
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-uymk26-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                PASS
              </span>
            </div>
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-18g2qr-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                PASS
              </span>
            </div>
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-w94hel-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                FAIL
              </span>
            </div>
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-rmxtjy-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                FAIL
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-pc76l-AtlassianColor"
      >
        <div
          class="css-kdybcm-AtlassianColor"
        >
          <div>
            NAME
          </div>
          <div
            class="css-1rnzr54-AtlassianColor"
          >
            Y300 - Golden state
          </div>
        </div>
        <div
          class="css-1296n4u-AtlassianColor"
        >
          <div
            class="css-kdybcm-AtlassianColor"
          >
            <div>
              HEX
            </div>
            <div>
              #FFAB00
            </div>
          </div>
          <div
            class="css-kdybcm-AtlassianColor"
          >
            <div>
              RGB
            </div>
            <div>
              255, 171, 0
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-vpkdz5-AtlassianColor"
    >
      <div
        class="css-6bf4yd-CopyContainer"
        style="display: inline-block;"
      >
        <div
          class="css-392f6q-AtlassianColor"
        >
          <div
            class="css-sapaxh-AtlassianColor"
          >
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-uymk26-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                PASS
              </span>
            </div>
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-18g2qr-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                PASS
              </span>
            </div>
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-w94hel-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                FAIL
              </span>
            </div>
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-rmxtjy-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                FAIL
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-pc76l-AtlassianColor"
      >
        <div
          class="css-kdybcm-AtlassianColor"
        >
          <div>
            NAME
          </div>
          <div
            class="css-1rnzr54-AtlassianColor"
          >
            G300 - Fine pine
          </div>
        </div>
        <div
          class="css-1296n4u-AtlassianColor"
        >
          <div
            class="css-kdybcm-AtlassianColor"
          >
            <div>
              HEX
            </div>
            <div>
              #36B37E
            </div>
          </div>
          <div
            class="css-kdybcm-AtlassianColor"
          >
            <div>
              RGB
            </div>
            <div>
              54, 179, 126
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-vpkdz5-AtlassianColor"
    >
      <div
        class="css-6bf4yd-CopyContainer"
        style="display: inline-block;"
      >
        <div
          class="css-bcecln-AtlassianColor"
        >
          <div
            class="css-sapaxh-AtlassianColor"
          >
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-uymk26-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                PASS
              </span>
            </div>
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-18g2qr-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                PASS
              </span>
            </div>
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-w94hel-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                FAIL
              </span>
            </div>
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-rmxtjy-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                FAIL
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-pc76l-AtlassianColor"
      >
        <div
          class="css-kdybcm-AtlassianColor"
        >
          <div>
            NAME
          </div>
          <div
            class="css-1rnzr54-AtlassianColor"
          >
            T300 - Tamarama
          </div>
        </div>
        <div
          class="css-1296n4u-AtlassianColor"
        >
          <div
            class="css-kdybcm-AtlassianColor"
          >
            <div>
              HEX
            </div>
            <div>
              #00B8D9
            </div>
          </div>
          <div
            class="css-kdybcm-AtlassianColor"
          >
            <div>
              RGB
            </div>
            <div>
              0, 184, 217
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-vpkdz5-AtlassianColor"
    >
      <div
        class="css-6bf4yd-CopyContainer"
        style="display: inline-block;"
      >
        <div
          class="css-bl029o-AtlassianColor"
        >
          <div
            class="css-sapaxh-AtlassianColor"
          >
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-uymk26-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                PASS
              </span>
            </div>
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-18g2qr-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                FAIL
              </span>
            </div>
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-w94hel-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                PASS
              </span>
            </div>
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-rmxtjy-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                PASS
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-pc76l-AtlassianColor"
      >
        <div
          class="css-kdybcm-AtlassianColor"
        >
          <div>
            NAME
          </div>
          <div
            class="css-1rnzr54-AtlassianColor"
          >
            P300 - Da' juice
          </div>
        </div>
        <div
          class="css-1296n4u-AtlassianColor"
        >
          <div
            class="css-kdybcm-AtlassianColor"
          >
            <div>
              HEX
            </div>
            <div>
              #6554C0
            </div>
          </div>
          <div
            class="css-kdybcm-AtlassianColor"
          >
            <div>
              RGB
            </div>
            <div>
              101, 84, 192
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-vpkdz5-AtlassianColor"
    >
      <div
        class="css-6bf4yd-CopyContainer"
        style="display: inline-block;"
      >
        <div
          class="css-710neg-AtlassianColor"
        >
          <div
            class="css-sapaxh-AtlassianColor"
          >
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-uymk26-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                PASS
              </span>
            </div>
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-18g2qr-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                PASS
              </span>
            </div>
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-w94hel-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                PASS
              </span>
            </div>
            <div
              class="css-1800ows-ContrastTest"
            >
              <span
                class="css-rmxtjy-ContrastTest"
              >
                A
              </span>
              <span
                class="css-i6uz3k-ContrastTest"
              >
                FAIL
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="css-pc76l-AtlassianColor"
      >
        <div
          class="css-kdybcm-AtlassianColor"
        >
          <div>
            NAME
          </div>
          <div
            class="css-1rnzr54-AtlassianColor"
          >
            Red400 - Critical
          </div>
        </div>
        <div
          class="css-1296n4u-AtlassianColor"
        >
          <div
            class="css-kdybcm-AtlassianColor"
          >
            <div>
              HEX
            </div>
            <div>
              #F94D32
            </div>
          </div>
          <div
            class="css-kdybcm-AtlassianColor"
          >
            <div>
              RGB
            </div>
            <div>
              249, 77, 50
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AtlassianColor rgb 1`] = `
<DocumentFragment>
  <div
    class="css-vpkdz5-AtlassianColor"
  >
    <div
      class="css-6bf4yd-CopyContainer"
      style="display: inline-block;"
    >
      <div
        class="css-xj104v-AtlassianColor"
      >
        <div
          class="css-sapaxh-AtlassianColor"
        >
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-uymk26-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              FAIL
            </span>
          </div>
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-18g2qr-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              FAIL
            </span>
          </div>
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-w94hel-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              PASS
            </span>
          </div>
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-rmxtjy-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              PASS
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-pc76l-AtlassianColor"
    >
      <div
        class="css-kdybcm-AtlassianColor"
      >
        <div>
          NAME
        </div>
        <div
          class="css-1rnzr54-AtlassianColor"
        >
          text
        </div>
      </div>
      <div
        class="css-1296n4u-AtlassianColor"
      >
        <div
          class="css-kdybcm-AtlassianColor"
        >
          <div>
            HEX
          </div>
          <div>
            #000000
          </div>
        </div>
        <div
          class="css-kdybcm-AtlassianColor"
        >
          <div>
            RGB
          </div>
          <div>
            0, 0, 0
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`AtlassianColor rgba 1`] = `
<DocumentFragment>
  <div
    class="css-vpkdz5-AtlassianColor"
  >
    <div
      class="css-6bf4yd-CopyContainer"
      style="display: inline-block;"
    >
      <div
        class="css-1me72tc-AtlassianColor"
      >
        <div
          class="css-sapaxh-AtlassianColor"
        >
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-uymk26-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              FAIL
            </span>
          </div>
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-18g2qr-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              FAIL
            </span>
          </div>
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-w94hel-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              PASS
            </span>
          </div>
          <div
            class="css-1800ows-ContrastTest"
          >
            <span
              class="css-rmxtjy-ContrastTest"
            >
              A
            </span>
            <span
              class="css-i6uz3k-ContrastTest"
            >
              PASS
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-pc76l-AtlassianColor"
    >
      <div
        class="css-kdybcm-AtlassianColor"
      >
        <div>
          NAME
        </div>
        <div
          class="css-1rnzr54-AtlassianColor"
        >
          shadow
        </div>
      </div>
      <div
        class="css-1296n4u-AtlassianColor"
      >
        <div
          class="css-kdybcm-AtlassianColor"
        >
          <div>
            HEX
          </div>
          <div>
            #000000
          </div>
        </div>
        <div
          class="css-kdybcm-AtlassianColor"
        >
          <div>
            RGB
          </div>
          <div>
            0, 0, 0, 0.1
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
